--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </style>
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/queries.css" />
+    <script defer src="script.js"></script>
   </head>
   <body>
     <main>
@@ -52,7 +53,7 @@
             </li>
             <li class="updates-el">And much more!</li>
           </ul>
-          <form class="subscribe-form" action="">
+          <form class="subscribe-form" action="#" novalidate>
             <div class="email-container">
               <div class="email-labels">
                 <label class="email-label" for="email">Email address</label>
